--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,19 @@ a {
   color: inherit;
 }
 
-div{
+div.Corpo{
   background-color: #141414;
+}
+
+div.Erro{
+  background-color: #fff;
+  font-size: 20px;
 }
 
 ::-webkit-scrollbar {
   width: 12px;
-  height: 5px;
+  height: 10px;
+  background: var(--black);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -39,4 +45,10 @@ div{
   border-radius: 10px;
   background: rgba(219,32,44,0.8); 
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+#root{
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
 }
